updated files for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -31,9 +31,24 @@
                     <button class="login-btn">Log in</button>
                     <button class="create-btn">Create account</button>
                 </div>
+                
+                <object class="menu-toggle" id="menu-toggle" type="image/svg+xml" data="./assets/menu.svg"></object>
+
             </div>
 
         </header>
+
+        <!-- HTML for dropdown menu -->
+        <div class="dropdown-menu" id="dropdown-menu">
+            <a class="dropdown-item" href="#">Home</a>
+            <a class="dropdown-item" href="#">About us</a>
+            <a class="dropdown-item" href="#">Products</a>
+            <a class="dropdown-item" href="#">Pricing</a>
+            <a class="dropdown-item" href="#">Blog</a>
+            <button class="login-btn">Log in</button> <br>
+            <button class="create-btn">Create account</button>
+        </div>
+
 
         <!-- main content -->
         <main role="main">
