--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <nav>
     
-                    <a class="page" href="#">Home</a>
+                    <a class="page home" href="#">Home</a>
                     <a class="page" href="#">About us<object class="arrow-down" type="image/svg+xml" data="./assets/arrow-down.svg"></object></a>
                     <a class="page" href="#">Products<object class="arrow-down" type="image/svg+xml" data="./assets/arrow-down.svg"></object></a>
                     <a class="page" href="#">Pricing</a>
